# relfa

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  flake.nix  relfa.1  renovate.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependencies.yml  publish.yml  release.yml  test.yml
modules/: dendritic.nix  devshell.nix  git-hooks.nix  home-manager.nix  package.nix  treefmt.nix
src/: archiver.rs  cli.rs  commands.rs  config.rs  graveyard.rs  main.rs  scanner.rs  state.rs  utils.rs
