[package]
name = "relfa"
version = "0.4.1"
edition = "2021"
authors = ["Roberto Abdelkader Martínez Pérez <robertomartinezp@gmail.com>"]
description = "A gentle digital gravedigger to lovingly archive your old files."
license = "MIT"
repository = "https://github.com/nilp0inter/relfa"
homepage = "https://github.com/nilp0inter/relfa"
documentation = "https://docs.rs/relfa"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
filetime = "0.2.26"
gethostname = "1.0.2"
notify-rust = "4.11.7"
serde = { version = "1.0.225", features = ["derive"] }
toml = "0.9.6"
walkdir = "2.5.0"
